<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@drawable/bg_item_normal">

    <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/ast_info_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="142dp"
            android:layout_height="108dp"
            android:background="@drawable/bg_picture_border"
            android:scaleType="fitCenter"/>
    <!--            android:adjustViewBounds="true"
    -->
    <LinearLayout
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:paddingLeft="2dp"
                android:orientation="vertical">

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_barcode"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_name"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_model"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="可用数量"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_location_barcode"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_location_name"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_control_type"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_serial"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_price"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_order_code"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_in_quantitiy"/>

            <!--<TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_total_quantity"/>-->

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_pc_per_pack"/>
            <TextView
                    style="@style/asset_info"
                    android:text="@string/laiyuan"/>
            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/pici"/>
            <TextView
                    style="@style/asset_info"
                    android:text="@string/beizhu"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/ast_info_barcode"
                    style="@style/asset_info.with_normal_background"
                    android:text="1098098778"/>

            <EditText
                    android:id="@+id/ast_info_name"
                    style="@style/asset_info.with_background"
                    android:text="步进电机"/>

            <EditText
                    android:id="@+id/ast_info_model"
                    style="@style/asset_info.with_normal_background"
                    android:text="W3D-1098789"/>

            <EditText
                    android:id="@+id/ast_info_quantity"
                    style="@style/asset_info.with_background"
                    android:text="5"/>

            <EditText
                    android:id="@+id/ast_info_location_barcode"
                    style="@style/asset_info.with_normal_background"
                    android:text="CK1HJ8767"/>

            <EditText
                    android:id="@+id/ast_info_location_name"
                    style="@style/asset_info.with_background"
                    android:text="第一排第三列"/>

            <EditText
                    android:id="@+id/ast_info_control_type"
                    style="@style/asset_info.with_normal_background"
                    android:text="管控备件"/>

            <EditText
                    android:id="@+id/ast_info_serial"
                    style="@style/asset_info.with_background"
                    android:text="Siuuy124"/>

            <EditText
                    android:id="@+id/ast_info_price"
                    style="@style/asset_info.with_normal_background"
                    android:text="125.5"/>

            <EditText
                    android:id="@+id/ast_info_order_code"
                    style="@style/asset_info.with_background"
                    android:text="Dinggou123"/>

            <EditText
                    android:id="@+id/ast_info_in_quantity"
                    style="@style/asset_info.with_normal_background"
                    android:text="100"/>

            <!--<TextView
                    android:id="@+id/ast_info_total_quantity"
                    style="@style/asset_info"
                    android:text="110"/>-->

            <EditText
                    android:id="@+id/ast_info_pc_per_pack"
                    style="@style/asset_info.with_background"
                    android:text="10"/>
            <EditText
                    android:id="@+id/ast_info_laiyuan"
                    style="@style/asset_info.with_normal_background"
                    android:text="laiyuan"/>
            <EditText
                    android:id="@+id/ast_info_pici"
                    style="@style/asset_info.with_background"
                    android:text="pici"/>
            <EditText
                    android:id="@+id/ast_info_beizhu"
                    style="@style/asset_info.with_normal_background"
                    android:text="beizhu"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>