<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

    <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingLeft="2dp"
                android:orientation="vertical">

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/ast_info_name"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/ast_info_model"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="是否管控"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/ast_info_serial"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/ast_info_price"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/ast_info_order_code"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/ast_info_pc_per_pack"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/pici"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/laiyuan"/>

            <TextView
                    style="@style/input_textview_nobarcode"
                    android:text="@string/beizhu"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/asset_check_in_nob_name"
                    style="@style/input_edittext"/>

            <EditText
                    android:id="@+id/asset_check_in_nob_model"
                    style="@style/input_edittext"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="管控备件"
                    android:textSize="14sp"
                    android:textColor="@android:color/primary_text_dark"
                    android:id="@+id/asset_check_in_controlled"/>

            <EditText
                    android:id="@+id/asset_check_in_nob_serial"
                    style="@style/input_edittext"/>

            <EditText
                    android:id="@+id/asset_check_in_nob_price"
                    style="@style/input_edittext"
                    android:inputType="numberDecimal"/>

            <EditText
                    android:id="@+id/asset_check_in_nob_order_code"
                    style="@style/input_edittext"/>

            <EditText
                    android:id="@+id/asset_check_in_nob_pcs_per_pack"
                    style="@style/input_edittext"
                    android:inputType="numberDecimal"/>
            <EditText
                    android:id="@+id/asset_check_in_nob_pici"
                    style="@style/input_edittext"
                    android:inputType="numberDecimal"/>
            <EditText
                    android:id="@+id/asset_check_in_nob_laiyuan"
                    style="@style/input_edittext"/>
            <EditText
                    android:id="@+id/asset_check_in_nob_beizhu"
                    style="@style/input_edittext"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>