<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

    <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/ast_info_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="142dp"
            android:layout_height="108dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@drawable/bg_picture_border"/>

    <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="vertical">

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_barcode"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_name"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_model"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_quantity"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_location_barcode"/>

            <TextView
                    style="@style/asset_info.with_background"
                    android:text="@string/ast_info_location_name"/>

            <TextView
                    style="@style/asset_info"
                    android:text="@string/ast_info_control_type"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/ast_info_barcode"
                    style="@style/asset_info.with_normal_background"
                    android:text="1098098778"/>

            <EditText
                    android:id="@+id/ast_info_name"
                    style="@style/asset_info.with_background"
                    android:text="步进电机"/>

            <EditText
                    android:id="@+id/ast_info_model"
                    style="@style/asset_info.with_normal_background"
                    android:text="W3D-1098789"/>

            <EditText
                    android:id="@+id/ast_info_quantity"
                    style="@style/asset_info.with_background"
                    android:text="5"/>

            <EditText
                    android:id="@+id/ast_info_location_barcode"
                    style="@style/asset_info.with_normal_background"
                    android:text="CK1HJ8767"/>

            <EditText
                    android:id="@+id/ast_info_location_name"
                    style="@style/asset_info.with_background"
                    android:text="第一排第三列"/>

            <EditText
                    android:id="@+id/ast_info_control_type"
                    style="@style/asset_info.with_normal_background"
                    android:text="管控备件"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>